// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/github-actions/extract extractPackageFile() extracts multiple action tag lines from yaml configuration file 1`] = `
Array [
  Object {
    "commitMessageTopic": "{{{depName}}} action",
    "currentValue": "master",
    "datasource": "github-tags",
    "depName": "actions/bin",
    "depType": "action",
    "pinDigests": false,
    "skipReason": "invalid-version",
    "versioning": "docker",
  },
  Object {
    "commitMessageTopic": "{{{depName}}} action",
    "currentValue": "1.0.0",
    "datasource": "github-tags",
    "depName": "actions/checkout",
    "depType": "action",
    "pinDigests": false,
    "versioning": "docker",
  },
  Object {
    "commitMessageTopic": "{{{depName}}} action",
    "currentValue": "v2",
    "datasource": "github-tags",
    "depName": "docker/build-push-action",
    "depType": "action",
    "pinDigests": false,
    "versioning": "docker",
  },
]
`;

exports[`manager/github-actions/extract extractPackageFile() extracts multiple docker image lines from yaml configuration file 1`] = `
Array [
  Object {
    "commitMessageTopic": "{{{depName}}} action",
    "currentValue": "master",
    "datasource": "github-tags",
    "depName": "actions/bin",
    "depType": "action",
    "pinDigests": false,
    "skipReason": "invalid-version",
    "versioning": "docker",
  },
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": undefined,
    "datasource": "docker",
    "depName": "replicated/dockerfilelint",
    "depType": "docker",
    "replaceString": "replicated/dockerfilelint",
    "versioning": "docker",
  },
  Object {
    "commitMessageTopic": "{{{depName}}} action",
    "currentValue": "master",
    "datasource": "github-tags",
    "depName": "actions/docker",
    "depType": "action",
    "pinDigests": false,
    "skipReason": "invalid-version",
    "versioning": "docker",
  },
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": "sha256:7b65413af120ec5328077775022c78101f103258a1876ec2f83890bce416e896",
    "currentValue": "6",
    "datasource": "docker",
    "depName": "node",
    "depType": "docker",
    "replaceString": "node:6@sha256:7b65413af120ec5328077775022c78101f103258a1876ec2f83890bce416e896",
    "versioning": "docker",
  },
]
`;
